--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -9,14 +9,44 @@
     margin: 10px;
 }
 
-#forecast {
+#head {
+    text-align: center;
+    margin: 10px;
+}
+
+#currentWeather {
+    text-align: center;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-  }
-  
-#forecast .card {
-    width: 20%;
     margin: 10px;
-  }
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#forecast {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.forecast {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
